Fix jar file Run on java 8 (instead of 11)